<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuiXinJi</string>
    <string name="action_settings">Settings</string>
    <string name="recent_records">最近记录</string>
    <string name="null_description">null</string>
    <string name="more_info">点击查看更多...</string>

    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_sort_alpha">Alphabetically</string>
    <string name="action_bar_sort_size">By size</string>
    <string name="action_bar_settings">Settings</string>
    
    <string name="back">返回</string>
    <string name="add_takephoto">加入拍照</string>
    <string name="add_picture">加入图片</string>
    <string name="add_audio">加入录音</string>
    <string name="add_doodle">加入涂鸦</string>
    <string name="revenue">收入</string>
    <string name="expenses">支出</string>
    <string name="time">时间</string>
    <string name="dowhat">事情</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
</resources>
